--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     }
   ],
   "start_url": ".",
-  "homepage": "https://mohsen-94.github.io/schedule",
+  "homepage": "https://mohsen-94.github.io/scheduler",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
