--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.4.3",
     "gh-pages": "^2.1.1",
+    "html2canvas": "^1.0.0-rc.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
